--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
     Entity.h
-    main.cpp Tail.h Tail.cpp Food.h Food.cpp Grid.h Grid.cpp)
+    main.cpp Tail.h Tail.cpp Food.h Food.cpp Grid.h Grid.cpp Game.cpp)
 
 add_executable(TronSnake ${SOURCE_FILES})
